--- a/style.css
+++ b/style.css
@@ -1,46 +1,206 @@
+*{
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
+  font-size: 16px;
   background-color: #f7f7f7;
   color: #333;
 }
 
 header {
-  background-color: #004080;
+
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+
+  background: none;
+  background-color: #ffffff;
   color: white;
   padding: 20px;
-  text-align: center;
+
+  position: fixed;
+  z-index: 999;
+}
+
+.sidebar{
+  width: 90%;
+  margin-left: 120px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo{
+  width: 200px;
+  height: 84.85px;
 }
 
 nav {
-  background-color: #003060;
+
+  width: 60%;
+  margin-right: 1.5rem;
+  background-color: #ffffff;
   padding: 10px;
   text-align: center;
+
+  display: flex;
+  justify-content: space-around;
+  
 }
 
 nav a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
-  margin: 0 15px;
-  font-weight: bold;
+  margin: 9.21875px 0px 0px;
+  padding: 7.8px 7.8px 7.8px 30px;
+
+  font-family: 'Open Sans', sans-serif;
+
+  font-size: 13px;
+  text-transform: capitalize;
+
+  cursor: pointer;
 }
+
+
 
 .hero {
-  background-color: #e0eafc;
-  padding: 60px 20px;
+  width: 100%;
+  height: auto;
+}
+
+.galery{
+  width: 100%;
+  height: auto;
+
+  position: relative;
+}
+
+.galery-images{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  position: relative;
+  
+}
+
+.text-galery{
+  position: absolute;
+  top: 31.5rem;
+  left: 22rem;
+
+  width: 60%;
+  
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  
+}
+
+.texts{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  background-color: rgba(247, 163, 233, 0.452);
+
+  width: 90%;
+  height: auto;
+
   text-align: center;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.hero h1 {
-  font-size: 36px;
-  margin-bottom: 10px;
+h2{
+  font-size: 3em;
 }
 
-.hero p {
-  font-size: 18px;
-  max-width: 700px;
-  margin: auto;
+h1{
+  font-size: 1.8em;
 }
+
+.button-text{
+  display: flex;
+  gap: 3rem;
+}
+
+.text-button1{
+  display: flex;
+  gap: 2rem;
+  padding: 1rem 1.5rem;
+
+  background-color: rgba(2, 196, 2, 0.692);
+}
+.text-button2{
+  display: flex;
+  gap: 2rem;
+  padding: 1rem 1.5rem;
+
+
+  background-color: rgba(226, 240, 28, 0.692);
+}
+.text-button3{
+  display: flex;
+  gap: 2rem;
+  padding: 1rem 1.5rem;
+
+
+  background-color: rgba(29, 151, 221, 0.692);
+
+}
+.button1{
+  
+  background-color: #4AAB10;
+  color: black;
+  padding: .625em 1.25em;
+
+  width: 100%;
+  height: auto;
+
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.button2{
+  
+  background-color: #FF9600;
+  color: black;
+  padding: .625em 1.25em;
+
+  width: 100%;
+  height: auto;
+
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.button3{
+  
+  background-color: #bdd9fd;
+  color: black;
+  padding: .625em 1.25em;
+
+  width: 100%;
+  height: auto;
+
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 
 .seccion {
   padding: 40px 20px;
