--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ nav a {
     display: none;
     flex-direction: column;
     width: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     margin-top: 1rem;
     padding: 1rem 0;
     text-align: center;
@@ -81,6 +81,7 @@ nav a {
   nav a {
     padding: 0.75rem 1rem;
     font-size: 1rem;
+    color: white;
   }
 
   nav.active {
