--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ nav a {
     display: none;
     flex-direction: column;
     width: 100%;
+    height: 100vh;
     background-color: rgb(0, 0, 0);
     margin-top: 1rem;
     padding: 1rem 0;
