--- a/style.css
+++ b/style.css
@@ -405,6 +405,73 @@ gap: 2em;
  }
 }
 
+.president{
+  width: 100%;
+  height: auto;
+
+  background-color: rgba(236, 241, 246, 1);
+  
+}
+
+.presidenta{
+
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+
+  font-size: 2.4em;
+  line-height: 1.3em;
+  margin: 0 0 .3em;
+  font-weight: 300;
+
+  color: #E009DA;
+}
+
+.about-me{
+ display: flex;
+
+ width: 95%;
+}
+
+.biografia{
+  width: 50%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 8em;
+}
+
+.mari{
+  font-size: 1.5em;
+  font-weight: bolder;
+  color: rgba(96, 91, 168, 1);
+}
+
+.bio{
+  color: rgba(96, 91, 168, 1);
+}
+
+.acordeon{
+
+  margin-top: 2em;
+
+  color: #E009DA;
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 4em;
+}
+
+.img-me{
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+
+  padding: 8em;
+}
+
 form{
   max-width: 500px;
   margin: auto;
